# zed

./: .gitignore  Cargo.toml
crates/i18n/: Cargo.toml
crates/i18n/src/: api.rs  defaults.rs  init.rs  lang_codes.rs  lib.rs  manager.rs  settings.rs
crates/i18n_extension/: Cargo.toml
crates/i18n_extension/src/: lib.rs
crates/i18n_importer/: Cargo.toml
crates/i18n_importer/src/: lib.rs
crates/i18n_selector/: Cargo.toml
crates/i18n_selector/src/: lib.rs
crates/i18n_tools/: Cargo.toml  README.md
crates/i18n_tools/src/: lib.rs
crates/zed/: Cargo.toml
crates/zed/src/zed/: app_menus.rs
extensions/i18n-zh-cn/: Cargo.toml  README.md  extension.toml
extensions/i18n-zh-cn/resources/: translation.json
extensions/i18n-zh-cn/src/: lib.rs
