[package]
name = "zed_i18n_extension"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
gpui = { path = "../gpui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
zed_i18n = { path = "../i18n" } 