[package]
name = "zed_i18n_tools"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "i18n-new"
path = "src/bin/i18n-new.rs"

[[bin]]
name = "i18n-scan"
path = "src/bin/i18n-scan.rs"

[[bin]]
name = "i18n-scan-app-menus"
path = "src/bin/i18n-scan-app-menus.rs"

[[bin]]
name = "i18n-validate"
path = "src/bin/i18n-validate.rs"

[[bin]]
name = "i18n-reorganize"
path = "src/bin/i18n-reorganize.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.10"
zed_i18n = { path = "../i18n" } 